# nelko-p21-print

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.web.yml  compose.yml  pyproject.toml
app/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
app/android/: build.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/de/fewenk/nelkop21/: BluetoothSppPlugin.kt  (+1 more)
app/android/app/src/main/res/values/: strings.xml
app/electron/: .gitignore  electron-builder.json  package-lock.json  package.json  tsconfig.json
app/electron/scripts/: copy-renderer.mjs
app/electron/src/: ipc.ts  main.ts  preload.ts  serial.ts  shared.ts
app/src/: App.css  App.tsx  electron-bridge.d.ts  index.css
app/src/core/: crc16.ts  imaging.ts  index.ts  labels.ts  protocol.ts  types.ts
app/src/data/: index.ts
app/src/device/: BatchPanel.tsx  DevicePanel.tsx  device.css  printerService.ts
app/src/editor/: DesignBar.tsx  Editor.tsx  PrintPreview.tsx  designStore.ts  editor.css  index.ts  mailmerge.ts  raster.ts  useLabelEditor.ts
app/src/transport/: PrinterTransport.ts  android.ts  base64.ts  bluetoothSppPlugin.ts  bridge.ts  electron.ts  index.ts  webserial.ts
app/src/ui/: index.ts
app/test/: crc16.test.ts  helpers.ts  imaging.test.ts  protocol.test.ts
app/test/fixtures/: reference.json
examples/: .~lock.paperless-data.csv#  paperless-data.csv  test_data.csv
src/nelko_p21_print/: __init__.py  template.py
tools/: bt_bridge.py  gen_reference.py  server.py
