[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "nelko-p21-print"
version = "0.2.1"
description = "Nelko P21 label printer command line utility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "packaging>=24.0",
    "pillow>=11.0.0",
    "crc>=7.1.0",
    "cairosvg>=2.7.1",
    "qrcode>=7.4.2",
    "tqdm>=4.66.0",
]

[project.scripts]
nelko-p21-print = "nelko_p21_print:main"
